1:完善页面基类。2：规范化组件

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -92,7 +92,7 @@ switchLanguage() {
 `@co/*` 类库有许多带有 _i18n_ 字样的数据接口属性（例如：`page-header`、`st` 列描述、`Menu` 菜单数据等等），当你希望这些组件的数据接口能动态根据 Key 值按当前语言自动切换时，你还需要对 `CO_I18N_TOKEN` 定义一个自实现服务接口（例如：[I18NService](https://github.com/ng-alain/ng-alain/blob/master/src/app/core/i18n/i18n.service.ts)），并在根模块下注册。
 
 ```ts
-import { CO_I18N_TOKEN } from '@co/common';
+import { CO_I18N_TOKEN } from '@co/core';
 import { I18NService } from '@core/i18n/i18n.service';
 
 @NgModule({
